chore: Update cherry-grove property details and images

--- a/properties/cherry-grove.html
+++ b/properties/cherry-grove.html
@@ -277,34 +277,14 @@
           </p>
         </div>
 
-        <section class="gallery" mv-multiple>
+        <section class="gallery" mv-multiple property="airbnb-links">
           <a href="https://www.airbnb.com/rooms/1030589498253747656" target="_blank" rel="noopener noreferrer" property="link"
             ><img src="./rooms/3.webp" width="200" height="200" property="image"
           /></a>
-          <!-- <a href="https://www.airbnb.com/rooms/1030589992179067582" target="_blank" rel="noopener noreferrer"><img src="./rooms/1.jpeg" width="200" height="200" /></a>
-          <a href="https://www.airbnb.com/rooms/1030589321409011455" target="_blank" rel="noopener noreferrer"><img src="./rooms/2.webp" width="200" height="200" /></a>
-          <a href="https://www.airbnb.com/rooms/1010131515172519042" target="_blank" rel="noopener noreferrer"><img src="./rooms/4.jpeg" width="200" height="200" /></a> -->
         </section>
         <h2>House</h2>
-        <section class="gallery">
-          <img src="./cherry-grove-images/Front_2.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/Front.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/Foyer.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/Kitchen.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/Kitchen_2.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/Kitchen_3.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_10_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_12_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_13_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_14_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_2_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_3_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_4_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_5_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_6_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_7_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_8_2023-11-08_06-02-46.jpg" width="200" height="200" />
-          <img src="./cherry-grove-images/photo_9_2023-11-08_06-02-46.jpg" width="200" height="200" />
+        <section class="gallery" mv-multiple property="pictures">
+          <img src="./cherry-grove-images/Front_2.jpg" width="200" height="200" property="image" />
         </section>
       </section>
     </main>
