Update cherry-grove property details and images

--- a/properties/cherry-grove.html
+++ b/properties/cherry-grove.html
@@ -277,14 +277,18 @@
           </p>
         </div>
 
-        <section class="gallery" mv-multiple property="airbnb-links">
-          <a href="https://www.airbnb.com/rooms/1030589498253747656" target="_blank" rel="noopener noreferrer" property="link"
-            ><img src="./rooms/3.webp" width="200" height="200" property="image"
-          /></a>
+        <section class="gallery" mv-list>
+          <div property="airbnb-links" mv-list-item>
+            <a href="https://www.airbnb.com/rooms/1030589498253747656" target="_blank" rel="noopener noreferrer" property="link"
+              ><img src="./rooms/3.webp" width="200" height="200" property="image"
+            /></a>
+          </div>
         </section>
         <h2>House</h2>
-        <section class="gallery" mv-multiple property="pictures">
-          <img src="./cherry-grove-images/Front_2.jpg" width="200" height="200" property="image" />
+        <section class="gallery" mv-list>
+          <div mv-list-item property="pictures">
+            <img src="./cherry-grove-images/Front_2.jpg" width="200" height="200" property="image" />
+          </div>
         </section>
       </section>
     </main>
