chore: Update cherry-grove property details and images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="track" content="8TGYQOuEB3cWFtObB" />
     <title>Blunova Properties - Comfortable Rentals in Tennessee</title>
@@ -241,7 +241,7 @@
         <h2>Featured Properties</h2>
 
         <div class="property-list" mv-list>
-          <div class="property-card" mv-list-item>
+          <div class="property-card" mv-list-item property="propertyCard">
             <img class="property-image" src="./properties/cherry-grove-images/Front.jpg" />
             <div class="property-details">
               <h3 class="property-title">Cherry Grove</h3>
