--- a/properties/cherry-grove.html
+++ b/properties/cherry-grove.html
@@ -214,8 +214,11 @@
     mv-app="blunova-cherryGrove"
     mv-storage="https://github.com/hsingh23/blunova"
     mv-bar="no-login"
+    mv-autoedit
+    mv-logged-in
     autosave="3"
     mv-upload-path="pictures/cherry-grove"
+    mv-no-add
   >
     <header>
       <nav>
@@ -239,20 +242,21 @@
         <div class="property-description tinymce" property>
           <h2>Property Overview</h2>
           <p>This charming retreat in Knoxville offers a cozy and comfortable stay. The property features modern amenities and is perfect for both short and long stays.</p>
+          <p>&nbsp;</p>
           <p>
             The space includes a fully equipped kitchen, a spacious living area, and dedicated workspaces. The bedroom is designed for relaxation with a comfortable bed and ample
             storage.
           </p>
+          <p>&nbsp;</p>
           <h2>Amenities</h2>
-          <ul>
-            <li>Fully equipped kitchen with modern appliances</li>
-            <li>Comfortable bedroom with premium linens</li>
-            <li>High-speed Wi-Fi and dedicated workspace</li>
-            <li>Smart TV with streaming services</li>
-            <li>In-unit washer and dryer</li>
-            <li>Free parking on premises</li>
-            <li>Air conditioning and heating</li>
-          </ul>
+          <p>🍳 Fully equipped kitchen with modern appliances</p>
+          <p>🛏️ Comfortable bedroom with premium linens</p>
+          <p>💻 High-speed Wi-Fi and dedicated workspace</p>
+          <p>📺 Smart TV with streaming services</p>
+          <p>🧺 In-unit washer and dryer</p>
+          <p>🚗 Free parking on premises</p>
+          <p>❄️ Air conditioning and heating</p>
+          <p>&nbsp;</p>
           <h2>Location</h2>
           <p>
             Located in a quiet neighborhood in Knoxville, this property is close to local attractions, restaurants, and shopping centers. Enjoy easy access to downtown Knoxville
@@ -278,10 +282,10 @@
         </div>
 
         <section class="gallery" mv-list>
-          <div property="airbnb-links" mv-list-item>
-            <a href="https://www.airbnb.com/rooms/1030589498253747656" target="_blank" rel="noopener noreferrer" property="link"
-              ><img src="./rooms/3.webp" width="200" height="200" property="image"
-            /></a>
+          <div property="airbnbLinks" mv-list-item>
+            <a href="https://www.airbnb.com/rooms/1030589498253747656" target="_blank" rel="noopener noreferrer" property="link">
+              <img src="./rooms/3.webp" width="200" height="200" property="image" />
+            </a>
           </div>
         </section>
         <h2>House</h2>
