--- a/properties/luttrell.html
+++ b/properties/luttrell.html
@@ -302,33 +302,29 @@
     </footer>
 
     <script>
-      document.addEventListener(
-        "mv-load",
-        () => {
-          const galleryImages = document.querySelectorAll(".gallery>div>img");
+      document.addEventListener("DOMContentLoaded", () => {
+        const galleryImages = document.querySelectorAll(".gallery>img");
 
-          galleryImages.forEach((img) => {
-            img.addEventListener("click", () => {
-              const fullscreenImg = document.createElement("div");
-              fullscreenImg.style = `position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); display: flex; align-items: center; justify-content: center; z-index: 9999;`;
+        galleryImages.forEach((img) => {
+          img.addEventListener("click", () => {
+            const fullscreenImg = document.createElement("div");
+            fullscreenImg.style = `position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); display: flex; align-items: center; justify-content: center; z-index: 9999;`;
 
-              const imgElement = document.createElement("img");
-              imgElement.src = img.src;
-              imgElement.style.maxWidth = "90%";
-              imgElement.style.maxHeight = "90%";
-              imgElement.style.objectFit = "contain";
+            const imgElement = document.createElement("img");
+            imgElement.src = img.src;
+            imgElement.style.maxWidth = "90%";
+            imgElement.style.maxHeight = "90%";
+            imgElement.style.objectFit = "contain";
 
-              fullscreenImg.appendChild(imgElement);
-              document.body.appendChild(fullscreenImg);
+            fullscreenImg.appendChild(imgElement);
+            document.body.appendChild(fullscreenImg);
 
-              fullscreenImg.addEventListener("click", () => {
-                document.body.removeChild(fullscreenImg);
-              });
+            fullscreenImg.addEventListener("click", () => {
+              document.body.removeChild(fullscreenImg);
             });
           });
-        },
-        { once: true }
-      );
+        });
+      });
     </script>
   </body>
 </html>
