--- a/properties/luttrell.html
+++ b/properties/luttrell.html
@@ -211,13 +211,13 @@
   </head>
   <body
     mv-plugins="tinymce importhtml"
-    mv-app="blunova-cherryGrove"
+    mv-app="blunova-luttrel"
     mv-storage="https://github.com/hsingh23/blunova"
     mv-bar="no-login"
     mv-autoedit
     mv-logged-in
     autosave="3"
-    mv-upload-path="pictures/cherry-grove"
+    mv-upload-path="pictures/luttrel"
     mv-no-add
   >
     <header>
@@ -302,29 +302,33 @@
     </footer>
 
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const galleryImages = document.querySelectorAll(".gallery>img");
+      document.addEventListener(
+        "mv-load",
+        () => {
+          const galleryImages = document.querySelectorAll(".gallery>div>img");
 
-        galleryImages.forEach((img) => {
-          img.addEventListener("click", () => {
-            const fullscreenImg = document.createElement("div");
-            fullscreenImg.style = `position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); display: flex; align-items: center; justify-content: center; z-index: 9999;`;
+          galleryImages.forEach((img) => {
+            img.addEventListener("click", () => {
+              const fullscreenImg = document.createElement("div");
+              fullscreenImg.style = `position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); display: flex; align-items: center; justify-content: center; z-index: 9999;`;
 
-            const imgElement = document.createElement("img");
-            imgElement.src = img.src;
-            imgElement.style.maxWidth = "90%";
-            imgElement.style.maxHeight = "90%";
-            imgElement.style.objectFit = "contain";
+              const imgElement = document.createElement("img");
+              imgElement.src = img.src;
+              imgElement.style.maxWidth = "90%";
+              imgElement.style.maxHeight = "90%";
+              imgElement.style.objectFit = "contain";
 
-            fullscreenImg.appendChild(imgElement);
-            document.body.appendChild(fullscreenImg);
+              fullscreenImg.appendChild(imgElement);
+              document.body.appendChild(fullscreenImg);
 
-            fullscreenImg.addEventListener("click", () => {
-              document.body.removeChild(fullscreenImg);
+              fullscreenImg.addEventListener("click", () => {
+                document.body.removeChild(fullscreenImg);
+              });
             });
           });
-        });
-      });
+        },
+        { once: true }
+      );
     </script>
   </body>
 </html>
