--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta name="track" content="2qc1opQ0TsJDhuDIi" />
     <title>About Blunova Properties | Luxury Rentals in Tennessee</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&amp;family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://get.mavo.io/mavo.min.css" />
+    <script src="https://get.mavo.io/mavo.min.js"></script>
     <style>
       :root {
         --primary-color: #0066cc;
@@ -284,131 +286,81 @@
       gtag("config", "G-V0GW25P48Z");
     </script>
   </head>
-  <body>
+  <body
+    mv-app="blunovaAbout-bup3s7"
+    mv-plugins="tinymce"
+    mv-init="#initial"
+    mv-storage="https://github.com/hsingh23/blunova"
+    mv-bar="no-login"
+    autosave="3"
+    mv-upload-path="pictures"
+  >
     <header>
       <nav>
-        <div class="logo">Blunova Properties</div>
-        <ul class="nav-links">
-          <li><a href="./index.html">Home</a></li>
-          <li>
-            <a href="./properties.html">Properties</a>
-          </li>
-          <li><a href="./about.html">About</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+        <div class="logo" property="companyName">Blunova Properties</div>
+        <ul class="nav-links" mv-list>
+          <li mv-list-item><a href="./index.html" class="tinymce" property="navLink"></a></li>
         </ul>
       </nav>
     </header>
 
     <main>
       <section class="about-hero">
-        <h1>About Blunova Properties</h1>
+        <h1 property="heroTitle">About Blunova Properties</h1>
       </section>
 
       <section class="about-content">
-        <h2>Our Story</h2>
-        <p>
-          Blunova Properties was founded in 2010 with a vision to revolutionize the luxury rental market in Tennessee. Our founders, Sarah Thompson and Michael Chen, saw an
-          opportunity to blend modern design with Southern charm, creating unique living spaces that cater to the discerning renter.
-        </p>
-        <p>
-          Starting with a single property in Nashville, we've grown to manage over 50 premium rentals across Tennessee's major cities. Our success is built on our commitment to
-          quality, attention to detail, and dedication to providing an unparalleled living experience for our tenants.
-        </p>
+        <div class="tinymce" property="aboutContent">
+          <h2>Our Story</h2>
+          <p>
+            Blunova Properties was founded in 2010 with a vision to revolutionize the luxury rental market in Tennessee. Our founders, Sarah Thompson and Michael Chen, saw an
+            opportunity to blend modern design with Southern charm, creating unique living spaces that cater to the discerning renter.
+          </p>
+          <p>
+            Starting with a single property in Nashville, we've grown to manage over 50 premium rentals across Tennessee's major cities. Our success is built on our commitment to
+            quality, attention to detail, and dedication to providing an unparalleled living experience for our tenants.
+          </p>
 
-        <h2>Our Mission</h2>
-        <p>
-          At Blunova Properties, our mission is to redefine luxury living in Tennessee. We strive to create homes that inspire, comfort, and delight our residents. By carefully
-          curating our properties and providing exceptional service, we aim to exceed expectations and set new standards in the rental market.
-        </p>
+          <h2>Our Mission</h2>
+          <p>
+            At Blunova Properties, our mission is to redefine luxury living in Tennessee. We strive to create homes that inspire, comfort, and delight our residents. By carefully
+            curating our properties and providing exceptional service, we aim to exceed expectations and set new standards in the rental market.
+          </p>
 
-        <h2>Our Values</h2>
-        <ul>
-          <li><strong>Quality:</strong> We never compromise on the quality of our properties or services.</li>
-          <li><strong>Innovation:</strong> We continuously seek new ways to improve and enhance the living experience.</li>
-          <li><strong>Integrity:</strong> We operate with honesty and transparency in all our dealings.</li>
-          <li><strong>Community:</strong> We believe in fostering a sense of belonging among our residents and in the neighborhoods we serve.</li>
-          <li><strong>Sustainability:</strong> We are committed to implementing eco-friendly practices in our properties and operations.</li>
-        </ul>
+          <h2>Our Values</h2>
+          <ul>
+            <li><strong>Quality:</strong> We never compromise on the quality of our properties or services.</li>
+            <li><strong>Innovation:</strong> We continuously seek new ways to improve and enhance the living experience.</li>
+            <li><strong>Integrity:</strong> We operate with honesty and transparency in all our dealings.</li>
+            <li><strong>Community:</strong> We believe in fostering a sense of belonging among our residents and in the neighborhoods we serve.</li>
+            <li><strong>Sustainability:</strong> We are committed to implementing eco-friendly practices in our properties and operations.</li>
+          </ul>
+        </div>
       </section>
-      <h2 style="text-align: center; margin-bottom: 2rem">Our Journey</h2>
+      <h2 style="text-align: center; margin-bottom: 2rem" property="journeyTitle">Our Journey</h2>
 
-      <section class="timeline" style="margin-bottom: 5rem">
-        <div class="timeline-item left">
-          <div class="timeline-content">
-            <h3>2010</h3>
-            <p>Blunova Properties founded in Nashville, TN</p>
-          </div>
-        </div>
-        <div class="timeline-item right">
-          <div class="timeline-content">
-            <h3>2012</h3>
-            <p>Expanded to Memphis with our first out-of-Nashville property</p>
-          </div>
-        </div>
-        <div class="timeline-item left">
-          <div class="timeline-content">
-            <h3>2015</h3>
-            <p>Launched our innovative smart home integration program</p>
-          </div>
-        </div>
-        <div class="timeline-item right">
-          <div class="timeline-content">
-            <h3>2018</h3>
-            <p>Reached milestone of 25 premium properties across Tennessee</p>
-          </div>
-        </div>
-        <div class="timeline-item left">
-          <div class="timeline-content">
-            <h3>2020</h3>
-            <p>Introduced virtual tours and contactless move-in experiences</p>
-          </div>
-        </div>
-        <div class="timeline-item right">
-          <div class="timeline-content">
-            <h3>2023</h3>
-            <p>Celebrating our growth to over 50 luxury properties statewide</p>
+      <section class="timeline" style="margin-bottom: 5rem" mv-list>
+        <div class="timeline-item" mv-list-item>
+          <div class="timeline-content tinymce" property="timelineItem">
+            <h3 property="year"></h3>
+            <p property="description"></p>
           </div>
         </div>
       </section>
 
       <section class="team-section">
-        <h2 style="text-align: center; margin-bottom: 2rem">Meet Our Leadership Team</h2>
-        <div class="team-grid">
-          <div class="team-member">
-            <img
-              src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=687&amp;q=80"
-              alt="Sarah Thompson"
-              width="200"
-              height="200"
-            />
-            <h3>Sarah Thompson</h3>
-            <p>Co-founder &amp; CEO</p>
-          </div>
-          <div class="team-member">
-            <img
-              src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1171&amp;q=80"
-              alt="Michael Chen"
-              width="200"
-              height="200"
-            />
-            <h3>Michael Chen</h3>
-            <p>Co-founder &amp; COO</p>
-          </div>
-          <div class="team-member">
-            <img
-              src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=687&amp;q=80"
-              alt="David Martinez"
-              width="200"
-              height="200"
-            />
-            <h3>David Martinez</h3>
-            <p>Head of Property Management</p>
+        <h2 style="text-align: center; margin-bottom: 2rem" property="teamTitle">Meet Our Leadership Team</h2>
+        <div class="team-grid" mv-list>
+          <div class="team-member" mv-list-item>
+            <img src="" alt="" width="200" height="200" property="image" />
+            <h3 property="name"></h3>
+            <p property="position"></p>
           </div>
         </div>
       </section>
     </main>
 
-    <footer>
+    <footer class="tinymce" property="footerContent">
       <p>© 2023 Blunova Properties. All rights reserved.</p>
       <p>
         <a href="./privacy-policy.html" style="color: white">Privacy Policy</a>
@@ -416,5 +368,74 @@
         <a href="./terms-of-service.html" style="color: white">Terms of Service</a>
       </p>
     </footer>
+
+    <script type="application/json" id="initial">
+      {
+        "pageTitle": "About Blunova Properties",
+        "companyName": "Blunova Properties",
+        "navLink": [
+          {
+            "content": "Home",
+            "href": "./index.html"
+          },
+          {
+            "content": "About",
+            "href": "./about.html"
+          },
+          {
+            "content": "Contact",
+            "href": "./contact.html"
+          }
+        ],
+        "heroTitle": "About Blunova Properties",
+        "aboutContent": "<h2>Our Story</h2><p>Blunova Properties was founded in 2010 with a vision to revolutionize the luxury rental market in Tennessee. Our founders, Sarah Thompson and Michael Chen, saw an opportunity to blend modern design with Southern charm, creating unique living spaces that cater to the discerning renter.</p><p>Starting with a single property in Nashville, we've grown to manage over 50 premium rentals across Tennessee's major cities. Our success is built on our commitment to quality, attention to detail, and dedication to providing an unparalleled living experience for our tenants.</p><h2>Our Mission</h2><p>At Blunova Properties, our mission is to redefine luxury living in Tennessee. We strive to create homes that inspire, comfort, and delight our residents. By carefully curating our properties and providing exceptional service, we aim to exceed expectations and set new standards in the rental market.</p><h2>Our Values</h2><ul><li><strong>Quality:</strong> We never compromise on the quality of our properties or services.</li><li><strong>Innovation:</strong> We continuously seek new ways to improve and enhance the living experience.</li><li><strong>Integrity:</strong> We operate with honesty and transparency in all our dealings.</li><li><strong>Community:</strong> We believe in fostering a sense of belonging among our residents and in the neighborhoods we serve.</li><li><strong>Sustainability:</strong> We are committed to implementing eco-friendly practices in our properties and operations.</li></ul>",
+        "journeyTitle": "Our Journey",
+        "timelineItem": [
+          {
+            "year": "2010",
+            "description": "Blunova Properties founded in Nashville, TN"
+          },
+          {
+            "year": "2012",
+            "description": "Expanded to Memphis with our first out-of-Nashville property"
+          },
+          {
+            "year": "2015",
+            "description": "Launched our innovative smart home integration program"
+          },
+          {
+            "year": "2018",
+            "description": "Reached milestone of 25 premium properties across Tennessee"
+          },
+          {
+            "year": "2020",
+            "description": "Introduced virtual tours and contactless move-in experiences"
+          },
+          {
+            "year": "2023",
+            "description": "Celebrating our growth to over 50 luxury properties statewide"
+          }
+        ],
+        "teamTitle": "Meet Our Leadership Team",
+        "teamMember": [
+          {
+            "image": "https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80",
+            "name": "Sarah Thompson",
+            "position": "Co-founder & CEO"
+          },
+          {
+            "image": "https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80",
+            "name": "Michael Chen",
+            "position": "Co-founder & COO"
+          },
+          {
+            "image": "https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80",
+            "name": "David Martinez",
+            "position": "Head of Property Management"
+          }
+        ],
+        "footerContent": "<p>© 2023 Blunova Properties. All rights reserved.</p><p><a href=\"./privacy-policy.html\" style=\"color: white\">Privacy Policy</a> | <a href=\"./terms-of-service.html\" style=\"color: white\">Terms of Service</a></p>"
+      }
+    </script>
   </body>
 </html>
